kubernetes/apps/app-cluster/productivity/n8n/config/http-route-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-internal
  namespace: productivity
  annotations:
    external-dns.alpha.kubernetes.io/target: kubernetes.krapulax.home
    gethomepage.dev/description: "Workflow automation platform (internal)"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "App Cluster - productivity"
    gethomepage.dev/href: "http://n8n.krapulax.home"
    gethomepage.dev/icon: "n8n.png"
    gethomepage.dev/name: "N8n (internal)"
    gethomepage.dev/weight: "10"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  hostnames:
    - n8n.krapulax.home
  rules:
    - backendRefs:
        - name: n8n
          namespace: productivity
          port: 5678
