kubernetes/apps/app-cluster/productivity/n8n/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
  namespace: productivity
  annotations:
    external-dns.alpha.kubernetes.io/hostname: n8n.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external-apps.krapulax.dev
    gethomepage.dev/description: "Workflow automation platform"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "App Cluster - productivity"
    gethomepage.dev/href: "https://n8n.krapulax.dev"
    gethomepage.dev/icon: "n8n.png"
    gethomepage.dev/name: "n8n"
    gethomepage.dev/weight: "30"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - n8n.krapulax.dev
  rules:
    - backendRefs:
        - name: n8n
          namespace: productivity
          port: 5678
